Messing around with using the dash module to add some user input to the project

--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -317,10 +317,7 @@
    "source": [
     "#function to check if a variable is a numpy float or int\n",
     "def is_int_or_float(number):\n",
-    "    if type(number) == np.int64 or type(number) == np.int32 or type(number) == np.float64 or type(number) == np.float32:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    return isinstance(number, (np.integer, np.floating))"
    ]
   },
   {
@@ -695,10 +692,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x17595795b80>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#this code block uses the dash module to visualize some of the data\n",
+    "from dash import Dash, html, dcc, callback, Output, Input\n",
+    "import plotly.express as px\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('dataset.csv')\n",
+    "\n",
+    "app = Dash()\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    html.H1(children='Genre Scatterplot', style={'textAlign':'center', 'background-color': 'coral'}),\n",
+    "    html.H2(children='Select genre as well as x and y axes from columns in the dataset', style={'textAlign':'center', 'background-color': 'coral'}),\n",
+    "\n",
+    "    \n",
+    "    html.Div([\n",
+    "                html.Label(\"Select Track Genre:\"),\n",
+    "                dcc.Dropdown(df.track_genre.unique(), 'acoustic', id='dropdown-selection')\n",
+    "    ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
+    "    \n",
+    "    dcc.Dropdown(df.columns, 'popularity', id='dropdown-x-selection'),\n",
+    "    dcc.Dropdown(df.columns, 'valence', id='dropdown-y-selection'),\n",
+    "    dcc.Graph(id='graph-content')\n",
+    "])\n",
+    "\n",
+    "@callback(\n",
+    "    Output('graph-content', 'figure'),\n",
+    "    Input('dropdown-selection', 'value'),\n",
+    "    Input('dropdown-x-selection', 'value'),\n",
+    "    Input('dropdown-y-selection', 'value')\n",
+    "\n",
+    ")\n",
+    "def update_graph(value, valuex, valuey):\n",
+    "    dff = df[df.track_genre==value]\n",
+    "    return px.scatter(dff, valuex, valuey)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)\n"
+   ]
   }
  ],
  "metadata": {
