added more to dash app

--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -260,17 +260,14 @@
     "df.dropna(inplace=True)\n",
     "\n",
     "#this data frame is a summary of the number of values in each column and their data type\n",
-    "summarydf = pd.DataFrame(columns=['Column', 'Data type', 'Size', 'Number of unique Values'])#, 'Num of Null Values'])\n",
-    "\n",
+    "summarydf = pd.DataFrame(columns=['Column', 'Data type', 'Size', 'Number of unique Values'])\n",
     "\n",
     "for loop_count, column in enumerate(df.columns):\n",
-    "    summarydf.loc[loop_count] = [column, df[column].dtype, df[column].size, df[column].nunique()]#, df[column].isnull().sum()]\n",
+    "    summarydf.loc[loop_count] = [column, df[column].dtype, df[column].size, df[column].nunique()]\n",
     "    \n",
     "summarydf.set_index('Column', inplace=True)\n",
     "\n",
-    "summarydf\n",
-    "\n",
-    "#"
+    "summarydf"
    ]
   },
   {
@@ -659,16 +656,15 @@
     "    \n",
     "    if df[column].dtype == np.int64 or df[column].dtype == np.float64: #also ensure the columns we are performing calculations on only contain numerical values\n",
     "        statsdf.loc[loop_count] = [column,\n",
-    "                                   df[column].mean(), \n",
-    "                                   df[column].std(), \n",
-    "                                   df[column].var(), \n",
-    "                                   df[column].min(), \n",
-    "                                   df[column].max(), \n",
-    "                                   np.ptp(df[column]), \n",
-    "                                   df[column].quantile(0.25), \n",
+    "                                   df[column].mean(),\n",
+    "                                   df[column].std(),\n",
+    "                                   df[column].var(),\n",
+    "                                   df[column].min(),\n",
+    "                                   df[column].max(),\n",
+    "                                   np.ptp(df[column]),\n",
+    "                                   df[column].quantile(0.25),\n",
     "                                   df[column].median(),\n",
     "                                   df[column].quantile(0.75)]\n",
-    "        \n",
     "        if column == 'duration_ms':\n",
     "            statsdf.loc[loop_count + 1] = statsdf.loc[loop_count].apply(ms_to_minutes_seconds)\n",
     "            statsdf.loc[loop_count + 1, 'Column'] = 'duration minutes and seconds'\n",
@@ -694,6 +690,63 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dash import Dash, html, dcc, callback, Output, Input\n",
+    "import plotly.express as px\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this function creates a dash app layout for comparing \n",
+    "def compare_axes(data : pd.DataFrame, app : Dash): #enforce type of arguments to avoid ambiguity\n",
+    "    numerical_columns = data.select_dtypes(include='number').columns #this variable is to ensure only numerical columns can be selected for the graph axes\n",
+    "\n",
+    "    app.layout = html.Div([\n",
+    "        html.H1(children='Genre Scatterplot', style={'textAlign':'center', 'background-color': 'coral'}),\n",
+    "        html.H2(children='Select genre as well as x and y axes from columns in the dataset', style={'textAlign':'center', 'background-color': 'coral'}),\n",
+    "\n",
+    "        html.Div([\n",
+    "                    html.Label(\"Select Track Genre:\"),\n",
+    "                    dcc.Dropdown(data.track_genre.unique(), 'acoustic', id='dropdown-selection')\n",
+    "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
+    "        html.Div([\n",
+    "                    html.Label(\"X-Axis\"),\n",
+    "                    dcc.Dropdown(numerical_columns, 'valence', id='dropdown-x-selection')\n",
+    "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
+    "        html.Div([\n",
+    "                    html.Label(\"Y-Axis:\"),\n",
+    "                    dcc.Dropdown(numerical_columns, 'popularity', id='dropdown-y-selection')\n",
+    "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
+    "        html.Div([\n",
+    "            dcc.Checklist(options=[{'label': 'Include Regression Line', 'value': 'show'}], id='regression-toggle',value=[])  # Empty list means it's unchecked by default\n",
+    "        ], style={'marginTop': '20px', 'background-color': 'coral'}),\n",
+    "        dcc.Graph(id='graph-content')\n",
+    "    ])\n",
+    "\n",
+    "    @callback(\n",
+    "        Output('graph-content', 'figure'),\n",
+    "        Input('dropdown-selection', 'value'),\n",
+    "        Input('dropdown-x-selection', 'value'),\n",
+    "        Input('dropdown-y-selection', 'value'),\n",
+    "        Input('regression-toggle', 'value')\n",
+    "    )\n",
+    "    def update_graph(value, valuex, valuey, regression_toggle):\n",
+    "        dff = data[data.track_genre==value]\n",
+    "        trendline = \"ols\" if \"show\" in regression_toggle else None\n",
+    "        return px.scatter(dff, valuex, valuey, trendline=trendline, trendline_color_override='red')\n",
+    "    return app.layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -710,7 +763,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x17595795b80>"
+       "<IPython.lib.display.IFrame at 0x230f0115a90>"
       ]
      },
      "metadata": {},
@@ -719,43 +772,23 @@
    ],
    "source": [
     "#this code block uses the dash module to visualize some of the data\n",
-    "from dash import Dash, html, dcc, callback, Output, Input\n",
-    "import plotly.express as px\n",
-    "import pandas as pd\n",
-    "\n",
     "df = pd.read_csv('dataset.csv')\n",
+    "df = df.drop(columns=['Unnamed: 0']) #remove index column\n",
     "\n",
     "app = Dash()\n",
     "\n",
-    "app.layout = html.Div([\n",
-    "    html.H1(children='Genre Scatterplot', style={'textAlign':'center', 'background-color': 'coral'}),\n",
-    "    html.H2(children='Select genre as well as x and y axes from columns in the dataset', style={'textAlign':'center', 'background-color': 'coral'}),\n",
-    "\n",
-    "    \n",
-    "    html.Div([\n",
-    "                html.Label(\"Select Track Genre:\"),\n",
-    "                dcc.Dropdown(df.track_genre.unique(), 'acoustic', id='dropdown-selection')\n",
-    "    ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
-    "    \n",
-    "    dcc.Dropdown(df.columns, 'popularity', id='dropdown-x-selection'),\n",
-    "    dcc.Dropdown(df.columns, 'valence', id='dropdown-y-selection'),\n",
-    "    dcc.Graph(id='graph-content')\n",
-    "])\n",
-    "\n",
-    "@callback(\n",
-    "    Output('graph-content', 'figure'),\n",
-    "    Input('dropdown-selection', 'value'),\n",
-    "    Input('dropdown-x-selection', 'value'),\n",
-    "    Input('dropdown-y-selection', 'value')\n",
-    "\n",
-    ")\n",
-    "def update_graph(value, valuex, valuey):\n",
-    "    dff = df[df.track_genre==value]\n",
-    "    return px.scatter(dff, valuex, valuey)\n",
+    "app.layout = compare_axes(df, app)\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
