now allow for selection of mutliple track genres

--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,16 +712,16 @@
     "        html.H2(children='Select genre as well as x and y axes from columns in the dataset', style={'textAlign':'center', 'background-color': 'coral'}),\n",
     "\n",
     "        html.Div([\n",
-    "                    html.Label(\"Select Track Genre:\"),\n",
-    "                    dcc.Dropdown(data.track_genre.unique(), 'acoustic', id='dropdown-selection')\n",
+    "            html.Label(\"Select Track Genre:\"),\n",
+    "            dcc.Dropdown(data.track_genre.unique(), ['black-metal', 'death-metal', 'heavy-metal', 'metal'], id='dropdown-selection', multi=True)\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
     "        html.Div([\n",
-    "                    html.Label(\"X-Axis\"),\n",
-    "                    dcc.Dropdown(numerical_columns, 'valence', id='dropdown-x-selection')\n",
+    "            html.Label(\"X-Axis\"),\n",
+    "            dcc.Dropdown(numerical_columns, 'valence', id='dropdown-x-selection')\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
     "        html.Div([\n",
-    "                    html.Label(\"Y-Axis:\"),\n",
-    "                    dcc.Dropdown(numerical_columns, 'popularity', id='dropdown-y-selection')\n",
+    "            html.Label(\"Y-Axis:\"),\n",
+    "            dcc.Dropdown(numerical_columns, 'popularity', id='dropdown-y-selection')\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
     "        html.Div([\n",
     "            dcc.Checklist(options=[{'label': 'Include Regression Line', 'value': 'show'}], id='regression-toggle',value=[])  # Empty list means it's unchecked by default\n",
@@ -736,16 +736,21 @@
     "        Input('dropdown-y-selection', 'value'),\n",
     "        Input('regression-toggle', 'value')\n",
     "    )\n",
-    "    def update_graph(value, valuex, valuey, regression_toggle):\n",
-    "        dff = data[data.track_genre==value]\n",
+    "    def update_graph(genre_values, valuex, valuey, regression_toggle):\n",
+    "        #dff = data[data.track_genre==value]\n",
+    "        # Ensure that genre_values is always a list\n",
+    "        if isinstance(genre_values, str):\n",
+    "            genre_values = [genre_values]\n",
+    "    \n",
+    "        dff = df[df.track_genre.isin(genre_values)]\n",
     "        trendline = \"ols\" if \"show\" in regression_toggle else None\n",
-    "        return px.scatter(dff, valuex, valuey, trendline=trendline, trendline_color_override='red')\n",
+    "        return px.scatter(dff, valuex, valuey, color='track_genre', trendline=trendline, trendline_color_override='red')\n",
     "    return app.layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +768,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x230f0115a90>"
+       "<IPython.lib.display.IFrame at 0x13d2ff12ea0>"
       ]
      },
      "metadata": {},
