made the scatter function more generic so that any dataframe with at least 1 object category and 2 numerical categories can be passed in. Added dropdown that allows the user to select which object category they want to look at. Added random selection of initial value so that the graph is populated with some data on intial load. trying to make it use the index for the category if there are no object categories but it doesn't work yet

--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "track_genre         object  113999                      114"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "time_signature                          4.0  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,40 +688,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dash import Dash, html, dcc, callback, Output, Input\n",
     "import plotly.express as px\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this function creates a dash app layout for comparing \n",
+    "#this function creates a dash app layout for comparing\n",
     "def compare_axes(data : pd.DataFrame, app : Dash): #enforce type of arguments to avoid ambiguity\n",
     "    numerical_columns = data.select_dtypes(include='number').columns #this variable is to ensure only numerical columns can be selected for the graph axes\n",
-    "\n",
+    "    categorical_columns = data.select_dtypes(include='object').columns\n",
+    "    \n",
+    "    if len(categorical_columns) == 0:\n",
+    "        categorical_columns = pd.Index(['index'])  \n",
+    "    \n",
+    "    # Ensure the dataset passed in contains at least one categorical and two numerical columns\n",
+    "    if len(categorical_columns) < 1 or len(numerical_columns) < 2:\n",
+    "        raise ValueError(\"Data must contain at least one categorical (object) column and two numerical columns.\")\n",
+    " \n",
     "    app.layout = html.Div([\n",
-    "        html.H1(children='Genre Scatterplot', style={'textAlign':'center', 'background-color': 'coral'}),\n",
-    "        html.H2(children='Select genre as well as x and y axes from columns in the dataset', style={'textAlign':'center', 'background-color': 'coral'}),\n",
-    "\n",
+    "        #html.Div([\n",
+    "      #      html.H1(children='Genre Scatterplot', style={'textAlign':'center', 'background-color': 'coral'}),\n",
+    "      #      html.H2(children='Select genre as well as x and y axes from columns in the dataset', style={'textAlign':'center', 'background-color': 'coral', 'margin-top' : '0px'}),\n",
+    "      #  ]),\n",
     "        html.Div([\n",
-    "            html.Label(\"Select Track Genre:\"),\n",
-    "            dcc.Dropdown(data.track_genre.unique(), ['black-metal', 'death-metal', 'heavy-metal', 'metal'], id='dropdown-selection', multi=True)\n",
+    "            html.Label(\"Select Category:\"),\n",
+    "            dcc.Dropdown(categorical_columns, categorical_columns[0], id='dropdown-category-selection')\n",
+    "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
+    "        html.Div([\n",
+    "            html.Label(\"Select Values Within Category Column:\"),\n",
+    "            dcc.Dropdown(id='dropdown-value-selection', multi=True, value=[])\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
     "        html.Div([\n",
     "            html.Label(\"X-Axis\"),\n",
-    "            dcc.Dropdown(numerical_columns, 'valence', id='dropdown-x-selection')\n",
+    "            dcc.Dropdown(numerical_columns, numerical_columns[0], id='dropdown-x-selection')\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
     "        html.Div([\n",
     "            html.Label(\"Y-Axis:\"),\n",
-    "            dcc.Dropdown(numerical_columns, 'popularity', id='dropdown-y-selection')\n",
+    "            dcc.Dropdown(numerical_columns, numerical_columns[1], id='dropdown-y-selection')\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
     "        html.Div([\n",
     "            dcc.Checklist(options=[{'label': 'Include Regression Line', 'value': 'show'}], id='regression-toggle',value=[])  # Empty list means it's unchecked by default\n",
@@ -729,30 +743,54 @@
     "        dcc.Graph(id='graph-content')\n",
     "    ])\n",
     "\n",
+    "    # Update the values dropdown based on the selected categorical column\n",
+    "    @callback(\n",
+    "        Output('dropdown-value-selection', 'options'),\n",
+    "        Output('dropdown-value-selection', 'value'),  # Output the random value\n",
+    "        Input('dropdown-category-selection', 'value')\n",
+    "    )\n",
+    "    def update_value_options(selected_category):\n",
+    "        # Get the unique values of the selected categorical column\n",
+    "        if selected_category:\n",
+    "            unique_values = data[selected_category].unique()\n",
+    "            formatted_values = [{'label': str(i), 'value': str(i)} for i in unique_values]\n",
+    "            return formatted_values, [random.choice([i['value'] for i in formatted_values])]\n",
+    "        return [] \n",
+    "    #update graph values\n",
     "    @callback(\n",
     "        Output('graph-content', 'figure'),\n",
-    "        Input('dropdown-selection', 'value'),\n",
+    "        Input('dropdown-category-selection', 'value'),\n",
+    "        Input('dropdown-value-selection', 'value'),\n",
     "        Input('dropdown-x-selection', 'value'),\n",
     "        Input('dropdown-y-selection', 'value'),\n",
     "        Input('regression-toggle', 'value')\n",
     "    )\n",
-    "    def update_graph(genre_values, valuex, valuey, regression_toggle):\n",
-    "        #dff = data[data.track_genre==value]\n",
-    "        # Ensure that genre_values is always a list\n",
-    "        if isinstance(genre_values, str):\n",
-    "            genre_values = [genre_values]\n",
-    "    \n",
-    "        dff = df[df.track_genre.isin(genre_values)]\n",
-    "        trendline = \"ols\" if \"show\" in regression_toggle else None\n",
-    "        return px.scatter(dff, valuex, valuey, color='track_genre', trendline=trendline, trendline_color_override='red')\n",
+    "    def update_graph(category_column, selected_values, valuex, valuey, regression_toggle):\n",
+    "        if selected_values:\n",
+    "            dff = data[data[category_column].isin(selected_values)]\n",
+    "            \n",
+    "        trendline = \"ols\" if \"show\" in regression_toggle else None  #sometimes it takes a little time for the regression line to appear on first loading up the notebook\n",
+    "        return px.scatter(dff, valuex, valuey, color=category_column, trendline=trendline, trendline_color_override='red')\n",
     "    return app.layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>div.output_scroll { height: 100em; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -768,7 +806,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x13d2ff12ea0>"
+       "<IPython.lib.display.IFrame at 0x1fb1447d070>"
       ]
      },
      "metadata": {},
@@ -777,8 +815,12 @@
    ],
    "source": [
     "#this code block uses the dash module to visualize some of the data\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "display(HTML(\"<style>div.output_scroll { height: 100em; }</style>\"))\n",
+    "\n",
     "df = pd.read_csv('dataset.csv')\n",
-    "df = df.drop(columns=['Unnamed: 0']) #remove index column\n",
+    "df = df.drop(columns=['Unnamed: 0', 'track_id']) #remove index column\n",
     "\n",
     "app = Dash()\n",
     "\n",
@@ -790,10 +832,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Data must contain at least one categorical (object) column and two numerical columns.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[105], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#df = pd.read_csv('dataset.csv')\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#df = df.drop(columns=['Unnamed: 0']) #remove index column\u001b[39;00m\n\u001b[0;32m      4\u001b[0m app \u001b[38;5;241m=\u001b[39m Dash()\n\u001b[1;32m----> 6\u001b[0m app\u001b[38;5;241m.\u001b[39mlayout \u001b[38;5;241m=\u001b[39m \u001b[43mcompare_axes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstatsdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mapp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m      9\u001b[0m     app\u001b[38;5;241m.\u001b[39mrun(debug\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "Cell \u001b[1;32mIn[104], line 11\u001b[0m, in \u001b[0;36mcompare_axes\u001b[1;34m(data, app)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Ensure the dataset passed in contains at least one categorical and two numerical columns\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(categorical_columns) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(numerical_columns) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m---> 11\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData must contain at least one categorical (object) column and two numerical columns.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m app\u001b[38;5;241m.\u001b[39mlayout \u001b[38;5;241m=\u001b[39m html\u001b[38;5;241m.\u001b[39mDiv([\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;66;03m#html.Div([\u001b[39;00m\n\u001b[0;32m     15\u001b[0m   \u001b[38;5;66;03m#      html.H1(children='Genre Scatterplot', style={'textAlign':'center', 'background-color': 'coral'}),\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     37\u001b[0m     dcc\u001b[38;5;241m.\u001b[39mGraph(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgraph-content\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     38\u001b[0m ])\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Update the values dropdown based on the selected categorical column\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: Data must contain at least one categorical (object) column and two numerical columns."
+     ]
+    }
+   ],
+   "source": [
+    "#df = pd.read_csv('dataset.csv')\n",
+    "#df = df.drop(columns=['Unnamed: 0']) #remove index column\n",
+    "\n",
+    "app = Dash()\n",
+    "\n",
+    "app.layout = compare_axes(statsdf, app)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)"
+   ]
   }
  ],
  "metadata": {
