commented out filter slider stuff cuz idk how to make it work

--- a/MAT510CaseStudy1.ipynb
+++ b/MAT510CaseStudy1.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        " 'pd']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "track_genre         object  113999                      114"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "time_signature         4.0000       4.000000       4.0000        5.000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,18 +909,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import Dash, html, dcc, callback, Output, Input\n",
+    "from dash import Dash, html, dcc, callback, Output, Input, State\n",
     "import plotly.express as px\n",
     "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,6 @@
     "    \n",
     "    if len(categorical_columns) == 0:\n",
     "        using_index = True\n",
-    "        print(\"index\")\n",
     "        categorical_columns = data['index'] = data.index  # Create a new column with the DataFrame index\n",
     "    \n",
     "    # Ensure the dataset passed in contains at least one categorical and two numerical columns\n",
@@ -943,6 +942,9 @@
     "        initial_category = random.choice(categorical_columns) if len(categorical_columns) > 0 else None #randomise the category column\n",
     " \n",
     "    app.layout = html.Div([\n",
+    "        #dcc.Store(id='stored-data', data=data.to_dict()),\n",
+    "       # dcc.Store(id='previous-selected-values'),\n",
+    "       # dcc.Store(id='previous-selected-category'),\n",
     "        html.Div([\n",
     "            html.Label(\"Select Category:\"),\n",
     "            dcc.Dropdown(categorical_columns, initial_category, id='dropdown-category-selection')\n",
@@ -951,10 +953,15 @@
     "            html.Label(\"Select Values Within Category Column:\"),\n",
     "            dcc.Dropdown(id='dropdown-value-selection', multi=True, value=[])\n",
     "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
-    "        html.Div([\n",
+    "        # html.Div([\n",
+    "        #     html.Label(\"Filter by value \"),\n",
+    "        #     dcc.Dropdown(numerical_columns, numerical_columns[0], id='filter-selection'),\n",
+    "        #     dcc.Slider(id='value-slider', step=1)\n",
+    "        # ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
+    "         html.Div([\n",
     "            html.Label(\"X-Axis\"),\n",
     "            dcc.Dropdown(numerical_columns, numerical_columns[0], id='dropdown-x-selection')\n",
-    "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),\n",
+    "        ], style={'display': 'inline-block', 'width': '30%', 'verticalAlign': 'top', 'marginRight': '20px', 'background-color': 'coral'}),  \n",
     "        html.Div([\n",
     "            html.Label(\"Y-Axis:\"),\n",
     "            dcc.Dropdown(numerical_columns, numerical_columns[1], id='dropdown-y-selection')\n",
@@ -964,22 +971,60 @@
     "        ], style={'marginTop': '20px', 'background-color': 'coral'}),\n",
     "        dcc.Graph(id='graph-content')\n",
     "    ])\n",
+    "    # # Callback to update the slider based on the selected category\n",
+    "    # @callback(\n",
+    "    #     Output('value-slider', 'min'),\n",
+    "    #     Output('value-slider', 'max'),\n",
+    "    #     Output('value-slider', 'marks'),\n",
+    "    #     Output('value-slider', 'value'),\n",
+    "    #     Input('filter-selection', 'value'),\n",
+    "    #     State('stored-data', 'data')\n",
+    "    # )\n",
+    "    # def update_slider(selected_category, stored_data):\n",
+    "    #     df = h.pd.DataFrame(stored_data)\n",
+    "    #     # Get min and max based on the selected category\n",
+    "    #     min_value = df[selected_category].min()\n",
+    "    #     max_value = df[selected_category].max()\n",
+    "    #     marks = {i: str(i) for i in range(int(min_value), int(max_value) + 1, (max_value - min_value) // 5 or 1)}  # Dynamically create marks with step based on range\n",
+    "    #     return min_value, max_value, marks, min_value  # Default to the min value\n",
+    "    \n",
+    "    # @callback(\n",
+    "    #     Output('stored-data', 'data'), \n",
+    "    #     Input('filter-selection', 'value'),\n",
+    "    #     Input('value-slider', 'value'),\n",
+    "    #     State('stored-data', 'data')\n",
+    "    # )\n",
+    "    # def filter_by_numerical_category(filter_category, slider_value, stored_data):\n",
+    "    #     df = h.pd.DataFrame(stored_data)\n",
+    "    #     filtered_data = df[df[filter_category] >= slider_value]\n",
+    "    #     return filtered_data.to_dict()\n",
     "\n",
     "    # Update the values dropdown based on the selected categorical column\n",
     "    @callback(\n",
     "        Output('dropdown-value-selection', 'options'),\n",
     "        Output('dropdown-value-selection', 'value'),  # Output the random value\n",
     "        Input('dropdown-category-selection', 'value')\n",
+    "       # State('stored-data', 'data'),\n",
+    "        # State('previous-selected-values', 'data'),  # Get the current options\n",
+    "       # State('previous-selected-category', 'data')  # Get the current options\n",
     "    )\n",
-    "    def update_value_options(selected_category):\n",
+    "    def update_value_options(selected_category):#, stored_data, previous_options, previous_category):\n",
+    "        #df = h.pd.DataFrame(stored_data)\n",
     "        # Get the unique values of the selected categorical column\n",
+    "        \n",
+    "       # if selected_category == previous_category:\n",
+    "      #      return previous_options\n",
+    "        \n",
+    "       # else:\n",
     "        if(using_index):\n",
     "            return 0\n",
     "        else:\n",
-    "            unique_values = data[selected_category].unique()\n",
+    "            # previous_category = selected_category\n",
+    "            unique_values = df[selected_category].unique()\n",
     "            formatted_values = [{'label': str(i), 'value': str(i)} for i in unique_values]\n",
-    "            return formatted_values, random.sample([i['value'] for i in formatted_values], 3)\n",
-    "        return [] \n",
+    "            options = random.sample([i['value'] for i in formatted_values], 3)\n",
+    "            return formatted_values, options\n",
+    "    \n",
     "    #update graph values\n",
     "    @callback(\n",
     "        Output('graph-content', 'figure'),\n",
@@ -988,8 +1033,11 @@
     "        Input('dropdown-x-selection', 'value'),\n",
     "        Input('dropdown-y-selection', 'value'),\n",
     "        Input('regression-toggle', 'value')\n",
+    "        #State('stored-data', 'data')\n",
     "    )\n",
-    "    def update_graph(category_column, selected_values, valuex, valuey, regression_toggle):\n",
+    "    def update_graph(category_column, selected_values, valuex, valuey, regression_toggle): #, stored_data):\n",
+    "        #df = h.pd.DataFrame(stored_data)\n",
+    "\n",
     "        if selected_values:\n",
     "            dff = data[data[category_column].isin(selected_values)]\n",
     "            \n",
@@ -1000,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1018,11 +1066,53 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1e0bd068740>"
+       "<IPython.lib.display.IFrame at 0x2acd5398d10>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------\n",
+      "UnboundLocalError                         Traceback (most recent call last)\n",
+      "Cell In[43], line 89, in compare_axes.<locals>.update_value_options(selected_category='artists')\n",
+      "     77 @callback(\n",
+      "     78     Output('dropdown-value-selection', 'options'),\n",
+      "     79     Output('dropdown-value-selection', 'value'),  # Output the random value\n",
+      "   (...)\n",
+      "     86     #df = h.pd.DataFrame(stored_data)\n",
+      "     87     # Get the unique values of the selected categorical column\n",
+      "---> 89     if selected_category == previous_category:\n",
+      "        selected_category = 'artists'\n",
+      "     90         return previous_options\n",
+      "     92     else:\n",
+      "\n",
+      "UnboundLocalError: cannot access local variable 'previous_category' where it is not associated with a value\n",
+      "\n",
+      "---------------------------------------------------------------------------\n",
+      "UnboundLocalError                         Traceback (most recent call last)\n",
+      "Cell In[43], line 119, in compare_axes.<locals>.update_graph(\n",
+      "    category_column='artists',\n",
+      "    selected_values=[],\n",
+      "    valuex='popularity',\n",
+      "    valuey='duration_ms',\n",
+      "    regression_toggle=[]\n",
+      ")\n",
+      "    116     dff = data[data[category_column].isin(selected_values)]\n",
+      "    118 trendline = \"ols\" if \"show\" in regression_toggle else None  #sometimes it takes a little time for the regression line to appear on first loading up the notebook\n",
+      "--> 119 return px.scatter(dff, valuex, valuey, color=category_column, trendline=trendline, trendline_color_override='red')\n",
+      "        trendline = None\n",
+      "        valuex = 'popularity'\n",
+      "        valuey = 'duration_ms'\n",
+      "        px = <module 'plotly.express' from 'c:\\\\Users\\\\hamis\\\\repos\\\\MAT510\\\\.venv\\\\Lib\\\\site-packages\\\\plotly\\\\express\\\\__init__.py'>\n",
+      "        category_column = 'artists'\n",
+      "\n",
+      "UnboundLocalError: cannot access local variable 'dff' where it is not associated with a value\n",
+      "\n"
+     ]
     }
    ],
    "source": [
